tests/neg-custom-args/captures/depfun-reach.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/depfun-reach.scala:19:4 ----------------------------------
19 |    op // error
   |    ^^
   |    Found:    (op : (xs: List[(X, () ->{io} Unit)]) ->{any} List[() ->{xs*} Unit])
   |    Required: (xs: List[(X, () ->{io} Unit)]) ->{any²} List[() -> Unit]
   |
   |    Note that capability `any` is not included in capture set {any²}.
   |
   |    where:    any  is a root capability in the type of parameter op
   |              any² is a root capability in the result type of method foo
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/depfun-reach.scala:26:60 ---------------------------------
26 |  val b: (xs: List[() ->{io} Unit]) => List[() ->{} Unit] = a // error
   |                                                            ^
   |                                        Found:    (a : (xs: List[() ->{io} Unit]) ->{any} List[() ->{xs*} Unit])
   |                                        Required: (xs: List[() ->{io} Unit]) ->{any²} List[() -> Unit]
   |
   |                                        Note that capability `any` is not included in capture set {any²}.
   |
   |                                        where:    any  is a root capability in the type of value a
   |                                                  any² is a root capability in the type of value b
   |
   | longer explanation available when compiling with `-explain`
